added excerpt separator to screencast posts

--- a/_posts/screencasts/statistik_mit_r/2012-11-09-boxplots.md
+++ b/_posts/screencasts/statistik_mit_r/2012-11-09-boxplots.md
@@ -8,5 +8,5 @@ video: <iframe width="560" height="315" mce_src="http://www.youtube.com/embed/uM
 ---
 
 In dieser Episode geht es um eine der besten Möglichkeiten, sich einen vereinfachten Überblick über die Verteilung der Werte in einer Variable zu informieren: den Boxplot.
-
+<!--more-->
 {{page.video}}
