--- a/_posts/screencasts/statistik_mit_r/2012-11-09-plotten.md
+++ b/_posts/screencasts/statistik_mit_r/2012-11-09-plotten.md
@@ -8,5 +8,5 @@ video: <iframe width="560" height="315" mce_src="http://www.youtube.com/embed/5t
 ---
 
 In dieser Episode geht es um den grundlegenden Befehl zur graphischen Darstellung in R: plot().
-
+<!--more-->
 {{page.video}}
