--- a/_posts/screencasts/statistik_mit_r/2013-01-21-ks_test.md
+++ b/_posts/screencasts/statistik_mit_r/2013-01-21-ks_test.md
@@ -8,5 +8,5 @@ video: <iframe width="560" height="315" mce_src="http://www.youtube.com/embed/HF
 ---
 
 Der erste in der Reihe der nichtparametrischen Tests, einer der anspruchslosesten, ist der Kolmogorow-Smirnow-Test, der geeignet ist, zwei ordinal skalierte Verteilungen miteinander zu vergleichen.
-
+<!--more-->
 {{page.video}}
