--- a/_posts/screencasts/statistik_mit_r/2013-01-28-t-test.md
+++ b/_posts/screencasts/statistik_mit_r/2013-01-28-t-test.md
@@ -8,5 +8,5 @@ video: <iframe width="560" height="315" mce_src="http://www.youtube.com/embed/Jz
 ---
 
 In diesem Video wird der t-Test behandelt, das "Arbeitspferd" der parametrischen Datenanalyse. Als parametrischer Test hat der t-Test einige Anforderungen an die Daten, die zuvor sichergestellt werden müssen. Hierzu dienen Kolmogorow-Smirnow-Test oder der Shapiro-Test zur Sicherstellung der Normalverteilung sowie der F-Test auf Varianzhomogenität. Diese werden ebenfalls vorgestellt.
-
+<!--more-->
 {{page.video}}
