--- a/_posts/screencasts/statistik_mit_r/2013-01-29-anova.md
+++ b/_posts/screencasts/statistik_mit_r/2013-01-29-anova.md
@@ -8,5 +8,5 @@ video: <iframe width="560" height="315" mce_src="http://www.youtube.com/embed/1n
 ---
 
 Diesmal geht es um die ANOVA, einen parametrischen Test, der es erlaubt, den Einfluss von einer oder mehrerer Gruppierungsvariablen mit mehr als zwei Ausprägungen auf eine Abhängige Variable (Response) zu untersuchten. Kurz wird auch die MANOVA angerissen, die es erlaubt, mehr als eine abhängige Variable gleichzeitig zu untersuchen.
-
+<!--more-->
 {{page.video}}
