repaired korrespondenzanalyse screencasts

--- a/_posts/screencasts/korrespondenzanalyse/2012-07-05-ca-capca.md
+++ b/_posts/screencasts/korrespondenzanalyse/2012-07-05-ca-capca.md
@@ -6,3 +6,7 @@ series: korrespondenzanalyse
 episode_nr: 4
 video: <iframe width="560" height="315" frameborder="0" allowfullscreen="" src="http://www.youtube.com/embed/lwAe4AwAa3Q"></iframe>
 ---
+
+Korrespondenzanalyse mit CAPCA
+<!--more-->
+{{page.video}}
