--- a/_posts/screencasts/korrespondenzanalyse/2012-07-06-ca-canoco.md
+++ b/_posts/screencasts/korrespondenzanalyse/2012-07-06-ca-canoco.md
@@ -6,3 +6,6 @@ series: korrespondenzanalyse
 episode_nr: 6
 video: <iframe width="560" height="315" frameborder="0" allowfullscreen="" src="http://www.youtube.com/embed/RBQ8SrAySKo"></iframe>
 ---
+Korrespondenzanalyse mit Canoco
+<!--more-->
+{{page.video}}
