--- a/_posts/screencasts/korrespondenzanalyse/2012-07-05-ca-past.md
+++ b/_posts/screencasts/korrespondenzanalyse/2012-07-05-ca-past.md
@@ -6,3 +6,6 @@ series: korrespondenzanalyse
 episode_nr: 3
 video: <iframe width="560" height="315" frameborder="0" allowfullscreen="" src="http://www.youtube.com/embed/b307Af1eQMs"></iframe>
 ---
+Korrespondenzanalyse mit PAST
+<!--more-->
+{{page.video}}
