--- a/_posts/screencasts/korrespondenzanalyse/2012-07-06-ca-r.md
+++ b/_posts/screencasts/korrespondenzanalyse/2012-07-06-ca-r.md
@@ -6,3 +6,6 @@ series: korrespondenzanalyse
 episode_nr: 7
 video: <iframe width="560" height="315" frameborder="0" allowfullscreen="" src="http://www.youtube.com/embed/NdzHWMQcOqE"></iframe>
 ---
+Korrespondenzanalyse mit R
+<!--more-->
+{{page.video}}
