--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -65,6 +65,7 @@ References
 	booktitle = {Neolithic {Diversities} : {Perspectives} from a conference in {Lund}, {Sweden}},
 	publisher = {Department of Archaeology and Ancient History, Lund University},
 	editor = {Brink, Kristian and Hydén, Susan and Jennbert, Kristina and Larsson, Lars and Olausson, Deborah},
+	author = {Hinz, Martin},
 	year = {2015},
 	note = {Book Editor},
 	keywords = {eigene, Neolithic, northern Europe},
