--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -272,15 +272,14 @@ References
 	keywords = {eigene}
 }
 
-
-@incollection{meller_climate_2015,
-	title = {Climate and societal change in the western {Mediterranean} area around 4.2 ka {BP}},
-	isbn = {978-3-944507-29-3},
-	language = {Englisch, Deutsch},
-	booktitle = {2200 {BC} - {Ein} {Klimasturz} als {Ursache} für den {Zerfall} der alten {Welt}: 7. {Mitteldeutscher} {Archäologentag} vom 23. bis 26. {Oktober} 2014 in {Halle}},
-	publisher = {Landesamt f. Denkmalpflege u. Archäologie Sachsen-Anhalt},
-	author = {Weinelt, Mara and Schwab, Christian and Kneisel, Jutta and Hinz, Martin},
-	editor = {Meller, Harald and Arz, Helge Wolfgang and Jung, Reinhard and Risch, Roberto},
-	year = {2015},
-	keywords = {eigene}
+@incollection{RN27,
+   author = {Weinelt, Mara and Schwab, Christian and Kneisel, Jutta and Hinz, Martin},
+   title = {Climate and societal change in the western Mediterranean area around 4.2 ka BP},
+   booktitle = {2200 BC - Ein Klimasturz als Ursache für den Zerfall der alten Welt: 7. Mitteldeutscher Archäologentag vom 23. bis 26. Oktober 2014 in Halle},
+   editor = {Meller, Harald and Arz, Helge Wolfgang and Jung, Reinhard and Risch, Roberto},
+   publisher = {Landesamt f. Denkmalpflege u. Archäologie Sachsen-Anhalt},
+   address = {Halle (Saale)},
+   pages = {461–480},
+   ISBN = {978-3-944507-29-3},
+   year = {2015}
 }
