--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -283,3 +283,28 @@ References
    ISBN = {978-3-944507-29-3},
    year = {2015}
 }
+
+@article{RN31,
+   author = {Arponen, V. P. J. and Mueller, Johannes and Hofmann, Robert and Furholt, Martin and Ribeiro, Artur and Horn, Christian and Hinz, Martin},
+   title = {Using the Capability Approach to Conceptualise Inequality in Archaeology: the Case of the Late Neolithic Bosnian Site Okolite c. 5200-4600 BCE},
+   journal = {Journal of Archaeological Method and Theory},
+   volume = {23},
+   number = {2},
+   pages = {541-560},
+   ISSN = {1072-5369;1573-7764},
+   DOI = {10.1007/s10816-015-9252-0},
+   year = {2016},
+   type = {Journal Article}
+}
+
+@article{RN33,
+   author = {Krossa, Veronica Rohde and Moros, Matthias and Leduc, Guillaume and Hinz, Martin and Blanz, Thomas and Schneider, Ralph},
+   title = {Regional climate change and the onset of farming in northern Germany and southern Scandinavia},
+   journal = {The Holocene},
+   pages = {0959683617702223},
+   ISSN = {0959-6836},
+   DOI = {10.1177/0959683617702223},
+   url = {http://dx.doi.org/10.1177/0959683617702223},
+   year = {2017},
+   type = {Journal Article}
+}
