--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -308,3 +308,14 @@ References
    year = {2017},
    type = {Journal Article}
 }
+
+@article{RN30,
+   author = {Dreibrodt, Stefan and Furholt, Martin and Hofmann, Robert and Hinz, Martin and Cheben, Ivan},
+   title = {P-ed-XRF-geochemical signatures of a 7300 year old Linear Band Pottery house ditch fill at Vráble-Ve'lké Lehemby, Slovakia - House inhabitation and post-depositional processes},
+   journal = {Quaternary International},
+   ISSN = {1040-6182},
+   DOI = {10.1016/j.quaint.2017.03.054},
+   url = {http://www.sciencedirect.com/science/article/pii/S1040618216309806},
+   type = {Journal Article},
+   year = {2017}
+}
