--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -125,6 +125,7 @@ References
 	author = {Hinz, Martin},
 	year = {2014},
 	keywords = {eigene, Hochschulschrift, Schleswig-Holstein / Neolithikum / Siedlungsraum --{\textgreater} Recherche mit gesamter Schlagwortkette}
+	preview = {https://hcommons.org/deposits/objects/hc:22380/datastreams/CONTENT/content}
 }
 
 
