--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -124,8 +124,8 @@ References
 	publisher = {Habelt},
 	author = {Hinz, Martin},
 	year = {2014},
-	keywords = {eigene, Hochschulschrift, Schleswig-Holstein / Neolithikum / Siedlungsraum --{\textgreater} Recherche mit gesamter Schlagwortkette}
-	howpublished = "\url{https://hcommons.org/deposits/objects/hc:22380/datastreams/CONTENT/content}"
+	keywords = {eigene, Hochschulschrift, Schleswig-Holstein / Neolithikum / Siedlungsraum --{\textgreater} Recherche mit gesamter Schlagwortkette},
+	preview = "\url{https://hcommons.org/deposits/objects/hc:22380/datastreams/CONTENT/content}"
 }
 
 
