--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -125,7 +125,7 @@ References
 	author = {Hinz, Martin},
 	year = {2014},
 	keywords = {eigene, Hochschulschrift, Schleswig-Holstein / Neolithikum / Siedlungsraum --{\textgreater} Recherche mit gesamter Schlagwortkette},
-	preview = "\url{https://hcommons.org/deposits/objects/hc:22380/datastreams/CONTENT/content}"
+	preview = "https://hcommons.org/deposits/objects/hc:22380/datastreams/CONTENT/content"
 }
 
 
