--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,12 @@
+@misc{schmid_c14bazaar:_2018, title= {c14bazAAR: {Download} and {Prepare} {C}14 {Dates} from {Different} {Source} {Databases}}, copyright= {GPL-2 {\textbar} file LICENSE}, shorttitle= {c14bazAAR}, url= {https://CRAN.R-project.org/package=c14bazAAR}, abstract= {Query different C14 date databases and apply basic data cleaning, merging and calibration steps.}, urldate= {2019-01-15}, author= {Schmid, Clemens and Seidensticker, Dirk and Knitter, Daniel and Hinz, Martin and Matzig, David and Hamer, Wolfgang and Schmütz, Kay}, month= {oct}, year= {2018}}
+
+
+@misc{mueller-scheessel_mortaar:_2018, title= {{mortAAR}: {Analysis} of {Archaeological} {Mortality} {Data}}, copyright= {GPL-3 {\textbar} file LICENSE}, shorttitle= {{mortAAR}}, url= {https://CRAN.R-project.org/package=mortAAR}, abstract= {A collection of functions for the analysis of archaeological mortality data (on the topic see e.g. Chamberlain 2006 {\textless}https://books.google.de/books?id=nG5FoO\_becAC\&lpg=PA27\&ots=LG0b\_xrx6O\&dq=life\%20table\%20archaeology\&pg=PA27\#v=onepage\&q\&f=false{\textgreater}). It takes demographic data in different formats and displays the result in a standard life table as well as plots the relevant indices (percentage of deaths, survivorship, probability of death, life expectancy, percentage of population).}, urldate= {2019-01-15}, author= {Mueller-Scheessel, Nils and Hinz, Martin and Schmid, Clemens and Rinne, Christoph and Knitter, Daniel and Hamer, Wolfgang and Seidensticker, Dirk and Faupel, Franziska and Tietze, Carolin and Grunert, Nicole}, month= {jun}, year= {2018}}
+
+
+@misc{martin_oxcaar:_2018, title= {{oxcAAR}: {Interface} to '{OxCal}' {Radiocarbon} {Calibration}}, copyright= {GPL-2 {\textbar} file LICENSE}, shorttitle= {{oxcAAR}}, url= {https://CRAN.R-project.org/package=oxcAAR}, abstract= {A set of tools that enables using 'OxCal' from within R. 'OxCal' ({\textless}https://c14.arch.ox.ac.uk/oxcal.html{\textgreater}) is a standard archaeological tool intended to provide 14C calibration and analysis of archaeological and environmental chronological information. 'OxcAAR' allows simple calibration with 'Oxcal' and plotting of the results as well as the execution of sophisticated ('OxCal') code and the import of the results of bulk analysis and complex Bayesian sequential calibration.}, urldate= {2019-01-15}, author= {Hinz, Martin and Schmid, Clemens and Knitter, Daniel and Tietze, Carolin}, month= {feb}, year= {2018}}
+
+
 
 @incollection{hinz_hunting_2018,
 	address = {Leiden},
