--- a/_bibliography/personal.bib
+++ b/_bibliography/personal.bib
@@ -320,3 +320,40 @@ References
    type = {Journal Article},
    year = {2017}
 }
+
+
+@article{stapfer_interdisciplinary_2019,
+	title = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE}): {Analysis} strategy and preliminary results from a test series using {pXRF}},
+	volume = {25},
+	issn = {2352-409X},
+	shorttitle = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE})},
+	url = {http://www.sciencedirect.com/science/article/pii/S2352409X18307181},
+	doi = {10.1016/j.jasrep.2019.03.018},
+	urldate = {2019-05-08},
+	journal = {Journal of Archaeological Science: Reports},
+	author = {Stapfer, Regine and Heitz, Caroline and Hinz, Martin and Hafner, Albert},
+	month = jun,
+	year = {2019},
+	keywords = {Neolithic, Northern Alpine Foreland, Pile-dwelling settlements, Pottery, pXRF},
+	pages = {217--238}
+}
+
+
+@incollection{stapfer_portable_2018,
+	address = {Bern},
+	title = {Portable {Röntgenfluoreszenzanalytik} ({pXRF}): {Mit} dem "{Labor} in der {Hand}" der {Vergangenheit} auf der {Spur}},
+	volume = {75},
+	copyright = {info:eu-repo/semantics/restrictedAccess},
+	shorttitle = {Portable {Röntgenfluoreszenzanalytik} ({pXRF})},
+	url = {http://www.ngbe.ch/},
+	language = {deu},
+	urldate = {2019-05-08},
+	booktitle = {Naturwissenschaftliche {Methoden} in der {Archäologie}},
+	publisher = {Naturforschende Gesellschaft Bern},
+	author = {Stapfer, Regine Barbara and Heitz, Caroline and Hinz, Martin and Hafner, Albert},
+	editor = {Burri, Thomas and Stapfer, Regine Barbara},
+	collaborator = {Stapfer, Regine Barbara and Heitz, Caroline and Hinz, Martin and Hafner, Albert and Burri, Thomas and Stapfer, Regine Barbara},
+	year = {2018},
+	doi = {10.7892/boris.126318},
+	pages = {136--155}
+}
