--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,19 @@
+@article{stapfer_interdisciplinary_2019,
+	title = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE}): {Analysis} strategy and preliminary results from a test series using {pXRF}},
+	volume = {25},
+	issn = {2352-409X},
+	shorttitle = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE})},
+	url = {http://www.sciencedirect.com/science/article/pii/S2352409X18307181},
+	doi = {10.1016/j.jasrep.2019.03.018},
+	abstract = {In recent decades numerous Neolithic lakeside and wetland settlements have been investigated in Switzerland, southern Germany and eastern France. The finds from these settlements indicate that complex relationships and close contacts existed between the inhabitants of different settlements and regions. This can be seen in ceramic vessels that exhibit similarities to those from other regions based on their style, manufacturing technique and raw materials. Although the use of chemical and archaeometric analyses to determine the origin of pottery has been well established for years and despite promising investigations, such analyses have hardly ever been carried out in the study region; as a result, the topic of mobility has rarely been examined. In order to better understand mobility patterns in Neolithic societies by combining stylistic analyses with a chemical characterisation of the potter's clay used, this paper explores the use of portable energy dispersive X-ray fluorescence (pXRF) analysis as a means of chemically characterising ceramics. Since studies on the use of pXRF to examine handmade, heterogeneous and coarsely tempered ceramics are rare, it seems necessary to evaluate the method. This paper presents the development of a strategy for the analysis of large series of handmade coarse ceramics from prehistoric settlements. Two examples illustrate the possibilities of and limitations to pXRF analysis on pottery for the detection of mobility patterns of Neolithic societies in the Northern Alpine Foreland.},
+	urldate = {2019-05-08},
+	journal = {Journal of Archaeological Science: Reports},
+	author = {Stapfer, Regine and Heitz, Caroline and Hinz, Martin and Hafner, Albert},
+	month = jun,
+	year = {2019},
+	keywords = {Neolithic, Northern Alpine Foreland, Pile-dwelling settlements, Pottery, pXRF},
+	pages = {217--238}
+}
 @misc{schmid_c14bazaar:_2018, title= {c14bazAAR: {Download} and {Prepare} {C}14 {Dates} from {Different} {Source} {Databases}}, copyright= {GPL-2 {\textbar} file LICENSE}, shorttitle= {c14bazAAR}, url= {https://CRAN.R-project.org/package=c14bazAAR}, abstract= {Query different C14 date databases and apply basic data cleaning, merging and calibration steps.}, urldate= {2019-01-15}, author= {Schmid, Clemens and Seidensticker, Dirk and Knitter, Daniel and Hinz, Martin and Matzig, David and Hamer, Wolfgang and Schmütz, Kay}, month= {oct}, year= {2018}}
 
 
@@ -24,6 +40,9 @@ link = {https://www.sidestone.com/books/past-landscapes},
 	year = {2018},
 	pages = {207--233}
 }
+@incollection{stapfer_portable_2018, address= {Bern}, title= {Portable {Röntgenfluoreszenzanalytik} ({pXRF}): {Mit} dem "{Labor} in der {Hand}" der {Vergangenheit} auf der {Spur}}, volume= {75}, copyright= {info:eu-repo/semantics/restrictedAccess}, shorttitle= {Portable {Röntgenfluoreszenzanalytik} ({pXRF})}, url= {http://www.ngbe.ch/}, language= {deu}, urldate= {2019-05-08}, booktitle= {Naturwissenschaftliche {Methoden} in der {Archäologie}}, publisher= {Naturforschende Gesellschaft Bern}, author= {Stapfer, Regine Barbara and Heitz, Caroline and Hinz, Martin and Hafner, Albert}, editor= {Burri, Thomas and Stapfer, Regine Barbara}, collaborator= {Stapfer, Regine Barbara and Heitz, Caroline and Hinz, Martin and Hafner, Albert and Burri, Thomas and Stapfer, Regine Barbara}, year= {2018}, doi= {10.7892/boris.126318}, pages= {136--155}}
+
+
 
 @incollection{hinz_putting_2018,
 	address = {Leiden},
