updated bibliography, removed puts from orcid plugin

--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,24 @@
+@article{doi:10.1177/0959683619857223,
+author = {Ingo Feeser and Walter Dörfler and Jutta Kneisel and Martin Hinz and Stefan Dreibrodt},
+title ={Human impact and population dynamics in the Neolithic and Bronze Age: Multi-proxy evidence from north-western Central Europe},
+journal = {The Holocene},
+volume = {0},
+number = {0},
+pages = {0959683619857223},
+year = {0},
+doi = {10.1177/0959683619857223},
+
+URL = { 
+        https://doi.org/10.1177/0959683619857223
+    
+},
+eprint = { 
+        https://doi.org/10.1177/0959683619857223
+    
+}
+,
+    abstract = { This paper aims at reconstructing the population dynamics during the Neolithic and Bronze Age, c. 4500–500 cal. BC, in north-western Central Europe. The approach is based on the assumption that increased population density is positively linked with human activity and human impact on the environment, respectively. Therefore, we use archaeological 14C dates and palaeoenvironmental data from northern Germany and south-western Denmark to construct and compare independent proxies of human activity. The latter involves relative quantification of human impact based on pollen analysis and soil erosion history inferred from summarizing of dated colluvial layers. Concurring patterns of changes in human activity are frequently recorded on a multi-centennial scale. Whereas such multi-proxy patterns are interpreted to indicate relative population changes, divergent patterns are discussed in the context of proxy-related uncertainties and potential biases. Patterns of temporal distribution of increasing and decreasing human activity are understood as ‘boom and bust’ phases in population density/size. Based on the comparison of the three proxies, we identify five phases of growing (boom) and four phases of decreasing (bust) population. The boom phases date to ca. 4000–3500, 3000–2900, 2200–2100, 1450–1300 and 1000–750 cal. BC. The bust phases to ca. 3200–3000, 2400–2300, 1650–1500 and 1200–1100 cal. BC. }
+}
 @article{stapfer_interdisciplinary_2019,
 	title = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE}): {Analysis} strategy and preliminary results from a test series using {pXRF}},
 	volume = {25},
@@ -14,6 +35,15 @@
 	keywords = {Neolithic, Northern Alpine Foreland, Pile-dwelling settlements, Pottery, pXRF},
 	pages = {217--238}
 }
+@incollection{muller_johannes_diversied_2019, address= {Bonn}, series= {Frühe {Monumentalität} und soziale {Differenzierung}}, title= {Diversiﬁed monuments: {A} chronological framework of the creation of monumental landscapes in prehistoric {Europe}}, isbn= {978-3-7749-4213-4}, abstract= {Megaliths – Societies – Landscapes. Early Monumentality and Social Diﬀerentiation in Neolithic Europe. Proceedings of the international conference »Megaliths – Societies – Landscapes. Early Monumentality and Social Differentiation in Neolithic Europe« (16th–20th June 2015) in Kiel}, language= {en}, number= {18}, urldate= {2019-05-15}, booktitle= {Megaliths – {Societies} – {Landscapes}}, publisher= {Habelt}, author= {{Maria Wunderlich} and {Johannes Müller} and {Martin Hinz}}, editor= {{Müller, Johannes} and Hinz, Martin and {Wunderlich, Maria}}, year= {2019}, pages= {25--29}}
+
+
+@book{muller_johannes_megaliths_2019, address= {Bonn}, series= {Frühe {Monumentalität} und soziale {Differenzierung}}, title= {Megaliths – {Societies} – {Landscapes}}, isbn= {978-3-7749-4213-4}, abstract= {Megaliths – Societies – Landscapes. Early Monumentality and Social Diﬀerentiation in Neolithic Europe. Proceedings of the international conference »Megaliths – Societies – Landscapes. Early Monumentality and Social Differentiation in Neolithic Europe« (16th–20th June 2015) in Kiel}, language= {en}, number= {18}, urldate= {2019-05-15}, publisher= {Habelt}, author= {{Müller, Johannes} and Hinz, Martin and {Wunderlich, Maria}}, year= {2019}}
+
+
+@incollection{muller_johannes_monumentalisation_2019, address= {Bonn}, series= {Frühe {Monumentalität} und soziale {Differenzierung}}, title= {The monumentalisation of {European} landscapes}, isbn= {978-3-7749-4213-4}, abstract= {Megaliths – Societies – Landscapes. Early Monumentality and Social Diﬀerentiation in Neolithic Europe. Proceedings of the international conference »Megaliths – Societies – Landscapes. Early Monumentality and Social Differentiation in Neolithic Europe« (16th–20th June 2015) in Kiel}, language= {en}, number= {18}, urldate= {2019-05-15}, booktitle= {Megaliths – {Societies} – {Landscapes}}, publisher= {Habelt}, author= {{Martin Hinz} and {Johannes Müller} and {Maria Wunderlich}}, editor= {{Müller, Johannes} and Hinz, Martin and {Wunderlich, Maria}}, year= {2019}, pages= {21--23}}
+
+
 @misc{schmid_c14bazaar:_2018, title= {c14bazAAR: {Download} and {Prepare} {C}14 {Dates} from {Different} {Source} {Databases}}, copyright= {GPL-2 {\textbar} file LICENSE}, shorttitle= {c14bazAAR}, url= {https://CRAN.R-project.org/package=c14bazAAR}, abstract= {Query different C14 date databases and apply basic data cleaning, merging and calibration steps.}, urldate= {2019-01-15}, author= {Schmid, Clemens and Seidensticker, Dirk and Knitter, Daniel and Hinz, Martin and Matzig, David and Hamer, Wolfgang and Schmütz, Kay}, month= {oct}, year= {2018}}
 
 
