--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,22 @@
+
+@article{hinz_chalcolithicbronze_2019,
+	title = {The {Chalcolithic}–{Bronze} {Age} transition in southern {Iberia} under the influence of the 4.2 kyr event? {A} correlation of climatological and demographic proxies},
+	volume = {21},
+	issn = {2197-649X},
+	shorttitle = {The {Chalcolithic}–{Bronze} {Age} transition in southern {Iberia} under the influence of the 4.2 kyr event?},
+	url = {http://www.jna.uni-kiel.de/index.php/jna/article/view/170},
+	doi = {10.12766/jna.2019.1},
+	language = {en-US},
+	urldate = {2019-12-17},
+	journal = {Journal of Neolithic Archaeology},
+	author = {Hinz, Martin and Schirrmacher, Julien and Kneisel, Jutta and Rinne, Christoph and Weinelt, Mara},
+	month = dec,
+	year = {2019},
+	pages = {1--26}
+}
+@article{schmid_c14bazaar:_2019, title= {c14bazAAR: {An} {R} package for downloading and preparing {C}14 dates from different source databases}, shorttitle= {c14bazAAR}, url= {https://joss.theoj.org}, doi= {10.21105/joss.01914}, abstract= {Schmid et al., (2019). c14bazAAR: An R package for downloading and preparing C14 dates from different source databases. Journal of Open Source Software, 4(43), 1914, https://doi.org/10.21105/joss.01914}, language= {en}, urldate= {2019-11-25}, journal= {Journal of Open Source Software}, author= {Schmid, Clemens and Seidensticker, Dirk and Hinz, Martin}, month= {nov}, year= {2019}}
+
+
 @article{doi:10.1177/0959683619857223,
 author = {Ingo Feeser and Walter Dörfler and Jutta Kneisel and Martin Hinz and Stefan Dreibrodt},
 title ={Human impact and population dynamics in the Neolithic and Bronze Age: Multi-proxy evidence from north-western Central Europe},
@@ -5,7 +24,7 @@ journal = {The Holocene},
 volume = {0},
 number = {0},
 pages = {0959683619857223},
-year = {0},
+year = {2019},
 doi = {10.1177/0959683619857223},
 
 URL = { 
@@ -18,6 +37,22 @@ eprint = {
 }
 ,
     abstract = { This paper aims at reconstructing the population dynamics during the Neolithic and Bronze Age, c. 4500–500 cal. BC, in north-western Central Europe. The approach is based on the assumption that increased population density is positively linked with human activity and human impact on the environment, respectively. Therefore, we use archaeological 14C dates and palaeoenvironmental data from northern Germany and south-western Denmark to construct and compare independent proxies of human activity. The latter involves relative quantification of human impact based on pollen analysis and soil erosion history inferred from summarizing of dated colluvial layers. Concurring patterns of changes in human activity are frequently recorded on a multi-centennial scale. Whereas such multi-proxy patterns are interpreted to indicate relative population changes, divergent patterns are discussed in the context of proxy-related uncertainties and potential biases. Patterns of temporal distribution of increasing and decreasing human activity are understood as ‘boom and bust’ phases in population density/size. Based on the comparison of the three proxies, we identify five phases of growing (boom) and four phases of decreasing (bust) population. The boom phases date to ca. 4000–3500, 3000–2900, 2200–2100, 1450–1300 and 1000–750 cal. BC. The bust phases to ca. 3200–3000, 2400–2300, 1650–1500 and 1200–1100 cal. BC. }
+}
+
+@article{arponen_environmental_2019,
+	title = {Environmental determinism and archaeology. {Understanding} and evaluating determinism in research design},
+	volume = {26},
+	issn = {1380-2038, 1478-2294},
+	url = {https://www.cambridge.org/core/product/identifier/S1380203819000059/type/journal_article},
+	doi = {10.1017/S1380203819000059},
+	language = {en},
+	number = {01},
+	urldate = {2019-11-19},
+	journal = {Archaeological Dialogues},
+	author = {Arponen, V. P. J. and Dörfler, Walter and Feeser, Ingo and Grimm, Sonja and Groß, Daniel and Hinz, Martin and Knitter, Daniel and Müller-Scheeßel, Nils and Ott, Konrad and Ribeiro, Artur},
+	month = jun,
+	year = {2019},
+	pages = {1--9}
 }
 @article{stapfer_interdisciplinary_2019,
 	title = {Interdisciplinary examinations carried out on heterogeneous coarse ceramics from {Neolithic} lakeside settlements in the {Northern} {Alpine} {Foreland} (3900–3500 {BCE}): {Analysis} strategy and preliminary results from a test series using {pXRF}},
