--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,4 +1,22 @@
 
+@article{schirrmacher_spatial_2020,
+	title = {Spatial patterns of temperature, precipitation, and settlement dynamics on the {Iberian} {Peninsula} during the {Chalcolithic} and the {Bronze} {Age}},
+	volume = {233},
+	issn = {0277-3791},
+	url = {http://www.sciencedirect.com/science/article/pii/S0277379119310182},
+	doi = {10.1016/j.quascirev.2020.106220},
+	abstract = {In light of recent climate changes, it is important to also gain knowledge about the spatial manifestation of past climate events and their potential impact on ancient societies across a wide range of different scenarios. Following this approach, we compare compilations of seasonal (winter and summer) as well as annual precipitation and temperature changes to a measure of human activity based on AMS 14C data of settlement sites from the Iberian Peninsula during the Chalcolithic and the Bronze Age – a period of major social turnover. Palaeoclimatic reconstructions show a long-term decrease in winter precipitation between 6000 and 3000 cal. BP (4050–1050 BCE). Superimposed to this long-term aridification trend was the 4.2 ka BP climate event, which manifested itself as a period of abrupt decrease in summer precipitation and/or an elongation of the summer dry period, but probably with constant winter precipitation from 4000 to 3800 cal. BP (2050–1850 BCE), particularly affecting the southeast of the Iberian Peninsula. Additionally, a winter cooling event across the Iberian Peninsula and its marginal seas occurred between 4400 and 4000 cal. BP (2450–2050 BCE) coinciding with Bond Event 3. By comparing human activities to the changes in seasonal and annual precipitation, new insight is gained into the causal relationships between climatic and social dynamics in the past. We show that winter precipitation potentially played a major role for the societies during the Chalcolithic and the Bronze Age of the southern Iberian Peninsula. While the El Argar culture at the south-eastern Iberian Peninsula boomed in spite of enhanced summer drought associated to the 4.2 ka BP climate event, decreasing winter precipitation was potentially contributing to a demographic decline in the southwest after 4800 cal. BP (2850 BCE) as well as to the bust of the El Argar culture in the southeast after 3600 cal. BP (1650 BCE) by limiting the agricultural strategies.},
+	language = {en},
+	urldate = {2020-02-25},
+	journal = {Quaternary Science Reviews},
+	author = {Schirrmacher, Julien and Kneisel, Jutta and Knitter, Daniel and Hamer, Wolfgang and Hinz, Martin and Schneider, Ralph R. and Weinelt, Mara},
+	month = apr,
+	year = {2020},
+	keywords = {4.2 ka BP event, Bronze Age, Chalcolithic, Data analysis, Holocene, Iberian Peninsula, Paleoclimatology, Precipitation, Seasonality, Temperature},
+	pages = {1--17}
+}
+
+
 @article{hinz_chalcolithicbronze_2019,
 	title = {The {Chalcolithic}–{Bronze} {Age} transition in southern {Iberia} under the influence of the 4.2 kyr event? {A} correlation of climatological and demographic proxies},
 	volume = {21},
