--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,7 @@
+@article{hinz_sensitivity_2020, title= {Sensitivity of {Radiocarbon} {Sum} {Calibration}}, volume= {3}, copyright= {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are ©, ® or ™ of their respective owners. No challenge to any owner’s rights is intended or should be inferred.}, issn= {2514-8362}, url= {http://journal.caa-international.org/articles/10.5334/jcaa.53/}, doi= {10.5334/jcaa.53}, abstract= {Sum calibration has become a standard tool for demographic studies, even though the methodology itself is far from uncontroversial. In addition to fundamental methodological criticism, questions are frequently raised about the sample size and data density required to detect large-scale changes in past populations. This article uses a simulation approach to determine the detection probabilities for events of varying intensity and with varying data density. At the same time, the effectiveness of Monte Carlo-based confidence envelopes as a countermeasure against false-positive results is tested. The results show that the detection of such events is not unlikely and that the Monte Carlo method is well suited to separate signal and noise. However, the nature of the events already observed in this way demands further assessment.}, language= {en}, number= {1}, urldate= {2020-08-13}, journal= {Journal of Computer Applications in Archaeology}, author= {Hinz, Martin}, month= {aug}, year= {2020}, note= {Number: 1
+Publisher: Ubiquity Press}, keywords= {Calibration, Population proxies, Prehistoric demography, Reproducible Research, Simulation, Summed radiocarbon date distributions}, pages= {238--252}}
+
+
 
 @article{schirrmacher_spatial_2020,
 	title = {Spatial patterns of temperature, precipitation, and settlement dynamics on the {Iberian} {Peninsula} during the {Chalcolithic} and the {Bronze} {Age}},
