--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -21,10 +21,10 @@ Publisher: Ubiquity Press}, keywords= {Calibration, Population proxies, Prehisto
 	pages = {1--17}
 }
 
-@incollection{hafner_introduction_2020, address= {Bern and Heidelberg}, series= {Open {Series} in {Prehistoric} {Archaeology}}, title= {Introduction: {Neolithic} and {Bronze} {Age} pile dwellings in {Europe}}, isbn= {978-3-948465-83-4}, language= {English}, number= {1}, booktitle= {Settling waterscapes in {Europe} {The} archaeology of {Neolithic} and {Bronze} {Age} pile-dwellings.}, publisher= {Propylaeum}, author= {Hafner, Albert and Hinz, Martin and Mazurkevich, Andrey N. and Dolbunova, Ekaterina V. and Pranckenaite, Elena}, editor= {Hafner, Albert and Dolbunova, Ekaterina and Mazurkevich, Andrey and Pranckenaite, Elena and Hinz, Martin}, year= {2020}, pages= {1--6}}
+@incollection{hafner_introduction_2020, address= {Bern and Heidelberg}, series= {Open {Series} in {Prehistoric} {Archaeology}}, title= {Introduction: {Neolithic} and {Bronze} {Age} pile dwellings in {Europe}}, isbn= {978-3-948465-83-4}, language= {English}, volume= {1}, booktitle= {Settling waterscapes in {Europe} {The} archaeology of {Neolithic} and {Bronze} {Age} pile-dwellings.}, publisher= {Propylaeum}, author= {Hafner, Albert and Hinz, Martin and Mazurkevich, Andrey N. and Dolbunova, Ekaterina V. and Pranckenaite, Elena}, editor= {Hafner, Albert and Dolbunova, Ekaterina and Mazurkevich, Andrey and Pranckenaite, Elena and Hinz, Martin}, year= {2020}, pages= {1--6}}
 
 
-@book{hafner_settling_2020, address= {Bern and Heidelberg}, series= {Open {Series} in {Prehistoric} {Archaeology}}, title= {Settling waterscapes in {Europe} {The} archaeology of {Neolithic} and {Bronze} {Age} pile-dwellings.}, isbn= {978-3-948465-83-4}, language= {English}, number= {1}, publisher= {Propylaeum}, editor= {Hafner, Albert and Dolbunova, Ekaterina and Mazurkevich, Andrey and Pranckenaite, Elena and Hinz, Martin}, year= {2020}}
+@book{hafner_settling_2020, address= {Bern and Heidelberg}, series= {Open {Series} in {Prehistoric} {Archaeology}}, title= {Settling waterscapes in {Europe} {The} archaeology of {Neolithic} and {Bronze} {Age} pile-dwellings.}, isbn= {978-3-948465-83-4}, language= {English}, volume= {1}, publisher= {Propylaeum}, editor= {Hafner, Albert and Dolbunova, Ekaterina and Mazurkevich, Andrey and Pranckenaite, Elena and Hinz, Martin}, year= {2020}}
 
 
 
