--- a/_bibliography/0000-0002-9904-6548.bib
+++ b/_bibliography/0000-0002-9904-6548.bib
@@ -1,3 +1,13 @@
+@article{Affolter_2021,	doi = {10.1016/j.quaint.2021.05.027},	url = {https://doi.org/10.1016%2Fj.quaint.2021.05.027},	year = 2021,	month = {jun},	publisher = {Elsevier {BV}},	author = {Jehanne Affolter and Lea Emmenegger and Albert Hafner and Caroline Heitz and Martin Hinz and Regine Stapfer and Helena Wehren},	title = {From flint provenance to mobility studies: New raw material determinations from Late Neolithic wetland sites at Lake Biel and Lake Constance},	journal = {Quaternary International}}
+@article{Weinelt_2021, doi= {10.1088/1748-9326/abd8a8}, url= {https://doi.org/10.1088/1748-9326/abd8a8}, year= {2021}, month= {apr}, publisher= {{IOP} Publishing}, volume= {16}, number= {5}, pages= {055007}, author= {Mara Weinelt and Jutta Kneisel and Julien Schirrmacher and Martin Hinz and Artur Ribeiro}, title= {Potential responses and resilience of Late Chalcolithic and Early Bronze Age societies to mid-to Late Holocene climate change on the southern Iberian Peninsula}, journal= {Environmental Research Letters}, abstract= {In this investigation, we use a socio-environmental multi-proxy approach to empirically test hypotheses of recurrent resilience cycles and the role of climate forcing in shaping such cycles on the Iberian Peninsula during mid-Holocene times. Our approach combines time series reconstructions of societal and environmental variables from the southern Iberian Peninsula across a 3000 yr time interval (6000–3000 cal yr BP), covering major societal and climate reorganisation. Our approach is based on regional compilations of climate variables from diverse terrestrial archives and integrates new marine climate records from the Western Mediterranean. Archaeological variables include changes in material culture, settlement reconstructions and estimates of human activities. In particular, both detailed chronologies of human activities evolving from the Late Neolithic to the Bronze Age and mid- to Late Holocene climate change across the mid-Holocene are compared, aiming to assess potential human responses and coping processes associated with abrupt mid-Holocene climate changes.}}
+
+
+@incollection{hinz_megaliths_2021, address= {Leiden}, title= {Megaliths, causewayed enclosures and social space in {North} {Central} {Europe}}, booktitle= {Mégalithismes et monumentalismes funéraires : passé, présent, futur}, publisher= {Sidestone Press}, author= {Hinz, Martin}, editor= {Ard, Vincent and Mens, Emmanuel and Gandelin, Muriel}, year= {2021}, pages= {277--318}}
+
+
+@article{heitz_mobility_2021, title= {Mobility as resilience capacity in northern {Alpine} {Neolithic} settlement communities}, volume= {36}, number= {1}, journal= {Archaeological Review from Cambridge}, author= {Heitz, Caroline and Hinz, Martin and Laabs, Julian and Hafner, Albert}, year= {2021}, pages= {75--106}}
+
+
 @article{Brunner_2020,	doi = {10.1371/journal.pone.0243719},	url = {https://doi.org/10.1371%2Fjournal.pone.0243719},	year = 2020,	month = {dec},	publisher = {Public Library of Science ({PLoS})},	volume = {15},	number = {12},	pages = {e0243719},	author = {Mirco Brunner and Jonas von Felten and Martin Hinz and Albert Hafner},	editor = {Peter F. Biehl},	title = {Central European Early Bronze Age chronology revisited: A Bayesian examination of large-scale radiocarbon dating},	journal = {{PLOS} {ONE}}}
 @article{hinz_sensitivity_2020, title= {Sensitivity of {Radiocarbon} {Sum} {Calibration}}, volume= {3}, copyright= {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are ©, ® or ™ of their respective owners. No challenge to any owner’s rights is intended or should be inferred.}, issn= {2514-8362}, url= {http://journal.caa-international.org/articles/10.5334/jcaa.53/}, doi= {10.5334/jcaa.53}, abstract= {Sum calibration has become a standard tool for demographic studies, even though the methodology itself is far from uncontroversial. In addition to fundamental methodological criticism, questions are frequently raised about the sample size and data density required to detect large-scale changes in past populations. This article uses a simulation approach to determine the detection probabilities for events of varying intensity and with varying data density. At the same time, the effectiveness of Monte Carlo-based confidence envelopes as a countermeasure against false-positive results is tested. The results show that the detection of such events is not unlikely and that the Monte Carlo method is well suited to separate signal and noise. However, the nature of the events already observed in this way demands further assessment.}, language= {en}, number= {1}, urldate= {2020-08-13}, journal= {Journal of Computer Applications in Archaeology}, author= {Hinz, Martin}, month= {aug}, year= {2020}, note= {Number: 1
 Publisher: Ubiquity Press}, keywords= {Calibration, Population proxies, Prehistoric demography, Reproducible Research, Simulation, Summed radiocarbon date distributions}, pages= {238--252}}
